# OMI-VV

./: README.md  pyproject.toml  setup.py
examples/: data.ttl  output.ttl  output.txt  pyproject.toml  run_workflow.py  vv_example.ipynb  workflow01.yaml
vv/: vv.py
vv/ontology/cuds/: session_manager.py
