[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "vv"
version = "2.0.0"
description = "verification and validation for OpenModel"
readme = "README.MD"
requires-python = ">=3.6"
authors = [{name = "Owain Beynon", email = "o.beynon@ucl.ac.uk"}]
classifiers = [
     "Development Status :: 4 - Beta",
     "Programming Language :: Python"
]

dependencies = [
    "numpy",
    "matplotlib",
    "scikit-learn",
    "ipywidgets",
    "nonconformist"
]

[project.urls]
repository = "https://github.com/H2020-OpenModel/OMI-VV/"

# Explicitly specify the package directories
[tool.setuptools.package-data]
packages =  ["vv"]

