[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "vv"
version = "0.0.1"
description = "verification and validation for OpenModel"
readme = "README.MD"
requires-python = ">=3.8"
authors = [{name = "Owain Beynon", email = "o.beynon@ucl.ac.uk"}]
classifiers = [
     "Development Status :: 4 - Beta",
     "Programming Language :: Python"
]

dependencies = [
    "numpy",
    "matplotlib",
    "scikit-learn",
    "ipywidgets",
    "nonconformist",
    "omikb @ git+https://github.com/H2020-OpenModel/OMIKB-toolbox.git",
    "discomat @ git+https://github.com/materials-discovery/discomat.git"
]

[project.urls]
repository = "https://github.com/H2020-OpenModel/OMI-VV/"

# Explicitly specify the package directories
[tool.setuptools.package-data]
packages =  ["vv"]

