[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
name = "vv"
version = "0.0.1"
packages = ["find:."]
python_requires = ">=3.6"

[tool.setuptools.metadata]
author = "Owain Beynon"
description = "Validation and Verification services for OpenModel"
long_description = { file = "README.md" }
long_description_content_type = "text/markdown"
url = "https://github.com/H2020-OpenModel/OMI-VV/"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]

[tool.setuptools.dependencies]
install_requires = [
    "numpy",
    "matplotlib",
    "scikit-learn",
    "ipywidgets",
    "nonconformist",
    "omikb",
    "discomat",
    # GitHub-hosted dependency
    "discomat @ git+https://github.com/materials-discovery/discomat.git"
]
